--- a/src/style.css
+++ b/src/style.css
@@ -13,16 +13,79 @@
   --cell-w: 34px;
 }
 
+body {
+  background-color: black;
+  display: flex;
+  justify-content: center;
+}
+
 .App {
+  position: relative;
   font-family: sans-serif;
+  /* border: 1px solid red; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  width: 100vw;
+  aspect-ratio: 9/16;
   color: white;
   background-color: black;
+  padding: 25px 50px;
+}
+
+.App h1 {
+  margin-top: auto;
+  margin-bottom: 50px;
+}
+
+.theme-icon {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  width: 3vw;
+  height: auto;
+}
+
+.mine-svg {
+  width: 200px;
+  margin-bottom: 50px;
+  fill: #349334 !important;
+}
+
+.App label {
+  margin-bottom: 5px;
+}
+
+.level-select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-color: black;
+  border: 1px solid #349334;
+  border-radius: 50px;
+  padding: 10px 10px;
+  color: white;
+  margin-left: 15px;
+  margin-bottom: 50px;
+}
+
+.new-game {
+  background-color: black;
+  border: 1px solid #349334;
+  border-radius: 50px;
+  padding: 10px 25px;
+  color: white;
+  transition: all 1s ease-out;
+}
+
+.new-game:active {
+  background-color: #349334;
+  color: black;
+  transition: all 0.1s ease-out;
+}
+
+.App p {
+  margin-top: auto;
 }
 
 body {
