--- a/src/style.css
+++ b/src/style.css
@@ -13,10 +13,18 @@
   --cell-w: 34px;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 body {
   background-color: black;
   display: flex;
   justify-content: center;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 }
 
 .App {
@@ -40,10 +48,9 @@ body {
 }
 
 .theme-icon {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  width: 3vw;
+  position: relative;
+  width: 25px;
+  color: #349334;
   height: auto;
 }
 
@@ -51,6 +58,15 @@ body {
   width: 200px;
   margin-bottom: 50px;
   fill: #349334 !important;
+}
+
+.mine-svg-small {
+  width: 20px;
+}
+
+.mine-info {
+  display: flex;
+  align-items: center;
 }
 
 .App label {
@@ -88,14 +104,45 @@ body {
   margin-top: auto;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+.nav-panel {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: 5px 10px;
+  margin-bottom: 25px;
 }
+
+.back-arrow {
+  background-color: transparent;
+  border: 1px solid #349334;
+  border-radius: 50%;
+  padding: 5px;
+  width: 25px;
+  height: 25px;
+  transition: all 1s ease-out;
+}
+
+.back-arrow:active {
+  background-color: #349334;
+  transition: all 0.1s ease-out;
+}
+
 .clear {
   clear: both;
   content: '';
+}
+
+.game-over-modal {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid #349334;
+  padding: 25px 25px 15px 25px;
+  background-color: black;
+  border-radius: 10px;
 }
 
 .game {
