--- a/src/style.css
+++ b/src/style.css
@@ -111,6 +111,7 @@ body {
 .nav-panel {
   display: flex;
   width: 100%;
+  align-items: center;
   justify-content: space-between;
   padding: 5px 10px;
   margin-bottom: 25px;
